src/objects/SharedServicesRequest__c.object
<CustomObject>
    <fields>
        <fullName>RemitToStateProvinceEmirateOld__c</fullName>
        <label>State/Province/EmirateOld</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RemitToStateProvinceEmirate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State/Province/Emirate</label>
        <referenceTo>State_Province_Emirate__c</referenceTo>
        <relationshipLabel>Global Business Services (State/Province/Emirate)</relationshipLabel>
        <relationshipName>GlobalBusinessServicesRemitStateProvEmir</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RemitToZipPostalCode__c</fullName>
        <label>Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Identify the person who is making the request (this will default to the current user if not populated with an alternative person)</inlineHelpText>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SharedServicesRequestsRequestor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SABBBEE30BlackFemale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SA BBBEE 30% Black Female</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SABBBEE50Black__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SA BBBEE 50% Black</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SABBBEECertificationDate__c</fullName>
        <label>SA BBBEE Certification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SABBBEERating__c</fullName>
        <label>SA BBBEE Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SABBBEESMEQSE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SA BBBEE SME / QSE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SABBBEEValueAdding__c</fullName>
        <label>SA BBBEE Value Adding</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SicCode__c</fullName>
        <inlineHelpText>If applicable, Standard Industrial Classification (SIC) codes are four-digit numerical codes assigned by the U.S. government to business establishments to identify the primary business of the establishment.</inlineHelpText>
        <label>SIC Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SicDescription__c</fullName>
        <inlineHelpText>If applicable, Standard Industrial Classification (SIC) description is the name of the industry tied to the 4 digit code above.</inlineHelpText>
        <label>SIC Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteNameRomaniaAddress__c</fullName>
        <label>Site Name (Romania)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteNameRomaniaRemitAddress__c</fullName>
        <label>Site Name (Romania)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Site__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>Global Business Services</relationshipLabel>
        <relationshipName>SharedServicesRequestsSite</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SkipValidation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Socio8aCertifiedFirms8a__c</fullName>
        <defaultValue>false</defaultValue>
        <label>8(a) Certified Firms (8a)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SocioAbilityOne__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ability One</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SocioAlaskaNativeCorpandTriballyOwned__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Alaska Native Corporation and Tribally Owned Firms (ANC/Tribally Owned)</inlineHelpText>
        <label>Alaska Native Corp and Tribally Owned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SocioHUBZone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HUBZone (HUBZone)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SocioHistoricallyBlackCollegesandUniv__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Historically Black Colleges and Universities (HBCU) and Minority Institutions (MI)</inlineHelpText>
        <label>Historically Black Colleges and Univ.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SocioLargeBusiness__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Large Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SocioMinorityOwned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Minority Owned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SocioNonProfit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-Profit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SocioServiceDisabledVeteranOwnedSDVO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Disabled Veteran Owned (SDVO)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SocioSmallBusinessSB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Small Business (SB)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SocioSmallDisadvantagedBusinessSDB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Small Disadvantaged Business (SDB)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SocioVeteranOwnedVO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Veteran-Owned (VO)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SocioWomenOwnedWO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Women-Owned (WO)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StateProvinceEmirateName__c</fullName>
        <formula>StateProvinceEmirate__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State/Province/Emirate Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateProvinceEmirateOld__c</fullName>
        <label>State/Province/EmirateOld</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateProvinceEmirate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State/Province/Emirate</label>
        <referenceTo>State_Province_Emirate__c</referenceTo>
        <relationshipLabel>Global Business Services</relationshipLabel>
        <relationshipName>GlobalBusinessServicesStateProvEm</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SubAgreementinplace__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is an agreement in place?</inlineHelpText>
        <label>Is an Agreement in place?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubApprovedonRegister__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Are they on the approved register?</inlineHelpText>
        <label>Sub Approved on Register</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubNotProjectRelatedDOAobtained__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this sub is not project related, has appropriate DoA approval been obtained?</inlineHelpText>
        <label>Sub Not Project Related, DOA obtained</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubconsultSubContractForProject__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this subconsultant /subcontractor for a project?</inlineHelpText>
        <label>Subconsultant/Subcontractor for project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubsContractorQuestionnaireANZ__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subs (Contractor Questionnaire) – (ANZ)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TINCheckUS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TIN Check (US)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TargetDays__c</fullName>
        <label>Target Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxReference__c</fullName>
        <inlineHelpText>National tax ID where company is registered.</inlineHelpText>
        <label>Tax Reference</label>
        <length>100</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>TaxRegistration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tax Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>USFederalGovernment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>US Federal Government</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Urgent__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to expedite the request process.</inlineHelpText>
        <label>Urgent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VAT_RegistrationNumber__c</fullName>
        <inlineHelpText>Input Value Added Tax Registration Number if applicable</inlineHelpText>
        <label>VAT Registration Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VAT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VAT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VendorType__c</fullName>
        <label>Vendor Type</label>
        <picklist>
            <picklistValues>
                <fullName>Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inter-Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Irc_Job_Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Profit Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recurring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subconsultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subcontractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax Authority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time Sheet Contactor (PAYE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time Sheet Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>W9orW8US__c</fullName>
        <defaultValue>false</defaultValue>
        <label>W9 or W8 (US)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WithholdingTaxEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Withholding Tax Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZipPostalCode__c</fullName>
        <label>Zip/Postal Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Global Business Services</label>
    <listViews>
        <fullName>All_Requests</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>CustomerName__c</columns>
        <columns>CustomerNumber__c</columns>
        <columns>Status__c</columns>
        <columns>BankTypeofAccount__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AmericasSharedServicesRequestAmericas</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Requestor__c</columns>
        <columns>OUName__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <label>Shared Services Queue (Americas)</label>
        <language>en_US</language>
        <queue>AmericasSharedServicesQueue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EXL_Processing</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Account__c</columns>
        <columns>CustomerName__c</columns>
        <columns>ERPSystem__c</columns>
        <columns>Geography__c</columns>
        <columns>OUName__c</columns>
        <columns>Requestor__c</columns>
        <columns>Status__c</columns>
        <columns>BankTypeofAccount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Processing</value>
        </filters>
        <filters>
            <field>Geography__c</field>
            <operation>equals</operation>
            <value>EMEA&amp;I</value>
        </filters>
        <label>EXL Processing EMEA</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyRequests</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Account__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <label>My Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SharedServicesQueue_SharedServicesRequestEMEA</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>RemitToCountry__c</columns>
        <columns>Urgent__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OUName__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Queue</filterScope>
        <label>Shared Services Queue (EMEA)</label>
        <language>en_US</language>
        <queue>EMEASharedServicesQueue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SharedServicesRequestAPAC</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Requestor__c</columns>
        <columns>OUName__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <label>Shared Services Queue (APAC)</label>
        <language>en_US</language>
        <queue>ApacSharedServicesQueue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>UnassignedRequests</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Account__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Queue</filterScope>
        <label>__Unassigned Requests</label>
        <language>en_US</language>
        <queue>AmericasSharedServicesQueue</queue>
    </listViews>
    <nameField>
        <displayFormat>CR-{0}</displayFormat>
        <label>Client Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Global Business Services</pluralLabel>
    <recordTypes>
        <fullName>AddSite</fullName>
        <active>true</active>
        <description>Use this request to add a new site (address) to an existing account – for customers or vendors</description>
        <label>Add Site</label>
    </recordTypes>
    <recordTypes>
        <fullName>CreateCustomer</fullName>
        <active>true</active>
        <description>Use this request to add a new customer (ensure you have checked the account does not already exist to avoid creating duplicates entries)</description>
        <label>Create Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>CreateSub</fullName>
        <active>true</active>
        <description>Use this request to add a new subconsultant or subcontractor vendor (ensure you have checked the account does not already exist to avoid creating duplicates entries)</description>
        <label>Create Sub</label>
    </recordTypes>
    <recordTypes>
        <fullName>CreateVendor</fullName>
        <active>true</active>
        <description>Use this request to add a new vendor/supplier (ensure you have checked the account does not already exist to avoid creating duplicates entries)</description>
        <label>Create Vendor</label>
    </recordTypes>
    <recordTypes>
        <fullName>GeneralRequest</fullName>
        <active>true</active>
        <description>Use this request for any other form of update or creation for which there is no specific request available</description>
        <label>General Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>UpdateSite</fullName>
        <active>true</active>
        <description>Use this request to update an existing site (address) – for customers or vendors</description>
        <label>Update Site</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cannot_Update_Record_in_Processing</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Status__c, &apos;Processing&apos;) &amp;&amp;   NOT(ISCHANGED(Status__c) )</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>This record cannot be edited while in Processing</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EcoContact1RequiredFields</fullName>
        <active>true</active>
        <description>Contact1: First Name, Last Name and Email or Phone are required.</description>
        <errorConditionFormula>OR(

AND(NOT(ISBLANK(Contact1FirstName__c)),
NOT(ISBLANK(Contact1LastName__c)),
ISBLANK(Contact1Phone__c),
ISBLANK(Contact1EmailAddress__c)),


AND(NOT(ISBLANK(Contact1FirstName__c)),
ISBLANK(Contact1LastName__c)),

AND(NOT(ISBLANK(Contact1LastName__c)),
ISBLANK(Contact1FirstName__c)))</errorConditionFormula>
        <errorDisplayField>Contact1FirstName__c</errorDisplayField>
        <errorMessage>Contact1: First Name, Last Name and Email or Phone are required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EcoContact2RequiredFields</fullName>
        <active>true</active>
        <description>Contact2: First Name, Last Name and Email or Phone are required.</description>
        <errorConditionFormula>OR(

AND(NOT(ISBLANK(Contact2FirstName__c)),
NOT(ISBLANK(Contact2LastName__c)),
ISBLANK(Contact2Phone__c),
ISBLANK(Contact2Email__c)),


AND(NOT(ISBLANK(Contact2FirstName__c)),
ISBLANK(Contact2LastName__c)),

AND(NOT(ISBLANK(Contact2LastName__c)),
ISBLANK(Contact2FirstName__c)))</errorConditionFormula>
        <errorDisplayField>Contact2FirstName__c</errorDisplayField>
        <errorMessage>Contact2 First Name, Last Name and Email or Phone are required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EcoCustomerBillingAddressFieldsRequired</fullName>
        <active>true</active>
        <description>Billing Address Line 1, City and Country are Required</description>
        <errorConditionFormula>AND( OR(RecordType.DeveloperName = &apos;CreateCustomer&apos;,RecordType.DeveloperName = &apos;AddSite&apos;),

OR( 

AND(NOT(ISBLANK(BillingStreetPOBox__c)),
OR(ISBLANK(BillingAddressCity__c),
ISBLANK(BillingStateProvinceEmirate__c),
ISPICKVAL(BillingAddressCountry__c,&quot;&quot;))),


AND(NOT(ISBLANK(BillingAddressCity__c)),
OR(ISBLANK(BillingStreetPOBox__c),
ISBLANK(BillingStateProvinceEmirate__c),
ISPICKVAL(BillingAddressCountry__c,&quot;&quot;))),


AND(NOT(ISBLANK(BillingStateProvinceEmirate__c)),
OR(ISBLANK(BillingStreetPOBox__c),
ISBLANK(BillingAddressCity__c),
ISPICKVAL(BillingAddressCountry__c,&quot;&quot;))),

AND(NOT(ISPICKVAL(BillingAddressCountry__c,&quot;&quot;)),
OR(ISBLANK(BillingStreetPOBox__c),
ISBLANK(BillingAddressCity__c),
ISBLANK(BillingStateProvinceEmirate__c)))))</errorConditionFormula>
        <errorDisplayField>BillingStreetPOBox__c</errorDisplayField>
        <errorMessage>Billing Address Line 1, City, State and Country are required if billing address is entered.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EcoCustomerBillingContactFieldsRequired</fullName>
        <active>true</active>
        <description>First Name, Last Name and Email or Phone are required.</description>
        <errorConditionFormula>OR( 
AND(NOT(ISBLANK(BillingContactFirstName__c)), 
NOT(ISBLANK(BillingContactLastName__c)), 
ISBLANK(BillingContactPhone__c), 
ISBLANK(BillingContactEmail__c)), 


AND(NOT(ISBLANK(BillingContactFirstName__c)), 
ISBLANK(BillingContactLastName__c)), 

AND(NOT(ISBLANK(BillingContactLastName__c)), 
ISBLANK(BillingContactFirstName__c)))</errorConditionFormula>
        <errorDisplayField>BillingContactFirstName__c</errorDisplayField>
        <errorMessage>Billing Contact Information: First Name, Last Name and Email or Phone are required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EcoPrimaryAddressRequired</fullName>
        <active>true</active>
        <description>You must designate at least 1 Primary address. This address will be populated on the new account.</description>
        <errorConditionFormula>IF(RecordType.DeveloperName = &quot;CreateSub&quot;,
AND(AddressIsPrimary__c = False,
BillingAddress1isPrimary__c = False),

IF(RecordType.DeveloperName = &quot;CreateVendor&quot;,
AND(AddressIsPrimary__c = False,
RemitIsPrimaryAddress__c = False),

IF(RecordType.DeveloperName = &quot;CreateCustomer&quot;,
AND(AddressIsPrimary__c = False,
BillingAddress1isPrimary__c = False),False)))</errorConditionFormula>
        <errorMessage>You must designate at least 1 Primary address. This address will be populated on the new account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EcoRemitToAddressFieldsRequired</fullName>
        <active>true</active>
        <description>Remit to Vendor Address Line 1, City and Country are Required</description>
        <errorConditionFormula>AND( OR(RecordType.DeveloperName = &apos;CreateVendor&apos;, RecordType.DeveloperName = &apos;AddSite&apos;),

OR( 

AND(NOT(ISBLANK(RemitToAddressLine1__c)), 
OR(ISBLANK(RemitToCity__c), 
ISBLANK(RemitToStateProvinceEmirate__c), 
ISPICKVAL(RemitToCountry__c,&quot;&quot;))), 


AND(NOT(ISBLANK(RemitToCity__c)), 
OR(ISBLANK(RemitToAddressLine1__c), 
ISBLANK(RemitToStateProvinceEmirate__c), 
ISPICKVAL(RemitToCountry__c,&quot;&quot;))), 


AND(NOT(ISBLANK(RemitToStateProvinceEmirate__c)), 
OR(ISBLANK(RemitToAddressLine1__c), 
ISBLANK(RemitToCity__c), 
ISPICKVAL(RemitToCountry__c,&quot;&quot;))), 

AND(NOT(ISPICKVAL(RemitToCountry__c,&quot;&quot;)), 
OR(ISBLANK(RemitToAddressLine1__c), 
ISBLANK(RemitToCity__c), 
ISBLANK(RemitToStateProvinceEmirate__c)))))</errorConditionFormula>
        <errorDisplayField>RemitToAddressLine1__c</errorDisplayField>
        <errorMessage>Vendor Address Line 1, City, State, and Country are Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EcoUsersCanOnlyEditOwnRecord</fullName>
        <active>true</active>
        <description>GBS users may only edit requests that they own.</description>
        <errorConditionFormula>AND($User.IsValidGBSQueueMember__c  = False,
Owner:User.Id &lt;&gt; $User.Id,
NOT(ISCHANGED (AssigntoSharedServices__c)))</errorConditionFormula>
        <errorMessage>GBS users may only edit requests that they own.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EcoVendorSubPrimaryContactFieldsRequired</fullName>
        <active>true</active>
        <description>First Name, Last Name and Email or Phone are required.</description>
        <errorConditionFormula>AND(
OR( RecordType.DeveloperName = &apos;CreateVendor&apos;,
RecordType.DeveloperName = &apos;CreateSub&apos;),

OR( 
AND(NOT(ISBLANK(PrimaryContactFirstName__c)), 
NOT(ISBLANK(PrimaryContactLastName__c)), 
ISBLANK(PrimaryContactPhone__c), 
ISBLANK(PrimaryContactEmail__c)), 

AND(NOT(ISBLANK(PrimaryContactFirstName__c)), 
ISBLANK(PrimaryContactLastName__c)), 

AND(NOT(ISBLANK(PrimaryContactLastName__c)), 
ISBLANK(PrimaryContactFirstName__c))))</errorConditionFormula>
        <errorDisplayField>PrimaryContactFirstName__c</errorDisplayField>
        <errorMessage>First Name, Last Name and Email or Phone are required</errorMessage>
    </validationRules>
</CustomObject>